--- a/css/output.css
+++ b/css/output.css
@@ -554,6 +554,14 @@ video {
   --tw-contain-style:  ;
 }
 
+.relative {
+  position: relative;
+}
+
+.block {
+  display: block;
+}
+
 .w-16 {
   width: 4rem;
 }
@@ -569,6 +577,11 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.logo {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media (min-width: 768px) {
