--- a/css/output.css
+++ b/css/output.css
@@ -585,6 +585,10 @@ video {
   margin-bottom: 2rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .block {
   display: block;
 }
@@ -614,13 +618,8 @@ video {
   justify-content: center;
 }
 
-.bg-green {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 96 70 / var(--tw-bg-opacity));
-}
-
-.p-4 {
-  padding: 1rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .pl-2 {
@@ -704,21 +703,22 @@ aside p, article p {
   white-space: pre-line;
 }
 
-#infobox {
+#infobox, #menubox, #orderbox {
   background-color: white;
   border-radius: 8px;
   padding: 8px;
-  margin-bottom: 8px;
-}
-
-#menubox {
-  background-color: white;
-  border-radius: 8px;
-  padding: 8px;
-  margin: 4px 0;
+  margin-bottom: 10px;
 }
 
 #orderbtn {
+  background-color: #68a132;
+  border-radius: 8px;
+  color: white;
+  font-weight: 600;
+}
+
+#orderbtn:hover {
+  background-color: #68a132;
 }
 
 .aactive {
@@ -763,6 +763,38 @@ footer {
   bottom: 0;
   display: block;
   width: 100%;
+}
+
+.rightpics, .leftpics {
+  display: none;
+}
+
+@media (min-width: 1200px) {
+  main {
+    display: inline-block;
+    margin-right: 300px;
+  }
+
+  .rightpics, .leftpics {
+    display: inline-block;
+    position: absolute;
+    width: 300px;
+    top: 283px;
+  }
+
+  .rightpics {
+    right: 0;
+  }
+
+  .leftpics {
+    left: 0;
+  }
+}
+
+.center {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media (min-width: 768px) {
